--- a/planets.html
+++ b/planets.html
@@ -41,13 +41,13 @@
                 console.log(planet, distance, orbitTime, rotationTime)
                 this.planetContainer = document.createElement("a-entity");
                 this.planetContainer.id = id ? id : planet;
-                this.planetContainer.setAttribute('position', {y: 8} );
+                this.planetContainer.setAttribute('position', {y: 10} );
+                this.planetContainer.setAttribute('visible', 'false' ); // invisible at first
 
-                this.planetContainer.setAttribute('animation',   { property: "rotation", dur: orbitTime/speedFactor*1000, easing: "linear",  to: {x:0, y: -360, z:0}, loop: true});
+                this.planetContainer.setAttribute('animation',   { property: "rotation", dur: orbitTime/speedFactor*1000, easing: "linear",  to: {x:0, y: -360, z:0}, loop: true, enabled: false});
 
 
                 this.planetEntity = document.createElement("a-entity");
-                // TODO: check if name is in available planets, perhaps a catalogue with various data...
                 this.planetEntity.setAttribute("gltf-model", "#"+planet + "Model");
                 this.planetEntity.setAttribute("position", {x:-20, y:0, z: 0-distance});
                 const rotationEnd = planet === "venus" ? -360 : 360;
@@ -67,23 +67,45 @@
         }
         const planets = [];
 
-        function startPlanets(planetArray=Object.keys(planetData) ) { // array of planets to be started
+        function createPlanets() { // creates all planets but they are not visible nor move
+            planets.push(new Planet("earth"));
 
-            for (let planet of planetArray ) {
-                planets.push(new Planet(planet));
-            }
+            planets.push(new Planet("venus"));
+
+            planets.push(new Planet("mercury"));
+
+            planets.push(new Planet("mars"));
+
+            planets.push(new Planet("jupiter"));
+
+            planets.push(new Planet("saturn"));
+            // extra speeds
+            planets.push(new Planet("mercury", "m2", 2));
+            planets.push(new Planet("venus", "v2", 2));
+            planets.push(new Planet("jupiter", "j12", 0.5));
+            planets.push(new Planet("saturn", "s12", 0.5));
+
+
+            planets.push(new Planet("mercury", "m4", 4));
+            planets.push(new Planet("jupiter", "j14", 0.25));
+            planets.push(new Planet("saturn", "s14", 0.25));
+
+
+            planets.push(new Planet("mercury", "m8", 8));
+            planets.push(new Planet("saturn", "s18", 1/8));
+
+            planets.push(new Planet("venus", "v4", 4));
+
+            planets.push(new Planet("venus", "v8", 8));
         }
 
-        function startExtra() { // starts extra speedups as in minute 8 (max)
-            planets.push(new Planet("mercury", "m2", 2) );
-            planets.push(new Planet("mercury", "m4", 4) );
-            planets.push(new Planet("venus", "v2", 2) );
-            planets.push(new Planet("jupiter", "j12", 0.5) );
-            planets.push(new Planet("saturn", "s12", 0.5) );
-            planets.push(new Planet("saturn", "s14", 0.25) );
-            planets.push(new Planet("mercury", "m8", 8) );
-            planets.push(new Planet("saturn", "s18", 0.125) );
+        function startPlanet(id) { // makes it visible and puts into move
+            const planet = planets.find(p => p.planetContainer.id===id) || document.querySelector("#"+id);
+            planet.planetContainer.setAttribute("visible", "true");
+            planet.planetContainer.setAttribute("animation", {enabled: true});
         }
+
+
 
         function removeAll() {
             for (let planet of planets) {
@@ -101,42 +123,45 @@
             }
         }
 
+
+
         function wsMessageCallback(time, timeString) {
 
+
             if (time>=0 && eventCounter<1) {
-                planets.push(new Planet("earth"));
+                startPlanet("earth");
                 eventCounter=1;
             } else if (time>=60 && eventCounter<2) {
-                planets.push(new Planet("venus"));
+                startPlanet("venus");
                 eventCounter=2;
             } else if (time>=120 && eventCounter<3) {
-                planets.push(new Planet("mercury"));
+                startPlanet("mercury");
                 eventCounter=3;
             } else if (time>=180 && eventCounter<4) {
-                planets.push(new Planet("mars"));
+                startPlanet("mars");
                 eventCounter=4;
             } else if (time>=240 && eventCounter<5) {
-                planets.push(new Planet("jupiter"));
+                startPlanet("jupiter");
                 eventCounter=5;
             } else if (time>=300 && eventCounter<6) {
-                planets.push(new Planet("saturn"));
+                startPlanet("saturn");
                 eventCounter=6;
             } else if (time>=360 && eventCounter<7) {
-                planets.push(new Planet("mercury", "m2", 2));
-                planets.push(new Planet("venus", "v2", 2));
-                planets.push(new Planet("jupiter", "j12", 0.5));
-                planets.push(new Planet("saturn", "s12", 0.5));
+                startPlanet("m2"); // 2 times faster
+                startPlanet("v2");
+                startPlanet("j12"); // 1/2 -  half speed
+                startPlanet("s12");
 
                 eventCounter = 7;
             } else if (time>=420 && eventCounter<8) {
-                planets.push(new Planet("mercury", "m4", 4));
-                planets.push(new Planet("jupiter", "j14", 0.25));
-                planets.push(new Planet("saturn", "s14", 0.25));
+                startPlanet("m4");
+                startPlanet("j14");
+                startPlanet("s14");
 
                 eventCounter = 8;
             } else if (time>=480 && eventCounter<9) { // 8:00
-                planets.push(new Planet("mercury", "m8", 8));
-                planets.push(new Planet("saturn", "s18", 1/8));
+                startPlanet("m8");
+                startPlanet("s18");
                 eventCounter = 9;
             } else if (time>=540 && eventCounter<10) { // 9:00
                 removePlanet("saturn");
@@ -149,11 +174,11 @@
                 removePlanet("s12");
                 removePlanet("j12");
                 removePlanet("v2");
-                planets.push(new Planet("venus", "v4", 4));
+                startPlanet("v4");
                 eventCounter = 11;
             } else if (time>=630 && eventCounter<12) { // 10:30
                 removePlanet("v4");
-                planets.push(new Planet("venus", "v8", 8));
+                startPlanet("v8");
                 eventCounter = 12;
             } else if (time>=660 && eventCounter<13) { // 11:00
                 removePlanet("s14");
@@ -161,18 +186,10 @@
             } else if (time>=730 && eventCounter<14) { // 12:00
                 removeAll();
                 eventCounter = 14;
-
             }
-
-
             document.querySelector("#timeLabel").setAttribute("value", timeString + " " + eventCounter); // not sure if eventCounter is good
+        }
 
-            }
-        // function wsStopCallback() {
-        //     removeAll();
-        //     eventCounter = 0;
-        //     time = -1;
-        // }
         let timer;
 
         window.onload = () => {
@@ -182,6 +199,7 @@
             document.querySelector("a-scene").addEventListener('loaded',
                 function () {
                 console.log("scene loaded");
+                createPlanets();
                 timer = setInterval( () => {  // quick workaround for ws / wss missing from vClick server
                     time++;
                     const minutes = Math.floor(time/60);
