--- a/websocket-test.html
+++ b/websocket-test.html
@@ -10,13 +10,20 @@
   Time: <label id="timeLabel"></label>
 
   <script>
+
+    function secondsToTimeString(time) {
+      const minutes =  Math.floor(time/60).toString();
+      const seconds = (time%60).toString();
+      const timeString = minutes.padStart(2, "0") + ":" +  seconds.padStart(2, "0");
+      return timeString;
+    }
     const socket = new WebSocket("wss://data.elektron.art");
 
     socket.addEventListener("message", (event) => {
       const data = JSON.parse(event.data);
       console.log(data);
       if (data.TT_time) {
-        document.querySelector("#timeLabel").innerHTML = data.TT_time.toString();
+        document.querySelector("#timeLabel").innerHTML = secondsToTimeString(data.TT_time);
       }
     });
 
