--- a/random-lines.html
+++ b/random-lines.html
@@ -64,19 +64,24 @@
         */
 
       function generatePoints() {
-        const maxDegrees = 360 * 3;
+        const maxDegrees = 360 * 5;
         const pointsCount = 100;
-        const radius = 10;
+        const radius = 20;
         return range(0, maxDegrees, maxDegrees / pointsCount)
           .map((angle) => [
             ...pol2car(angle, radius), // returning [x,y]
             0,
           ])
-          .map(([x, y, z]) => [x + random(-1, 1), y + random(-1, 1), z]);
+          .map(([x, y, z]) => [
+            x + random(-1, 1),
+            y + random(-1, 1),
+            z + random(-0.5, 0.5),
+          ]);
       }
 
       AFRAME.registerComponent("random-lines", {
         init: function () {
+          this.angle = 0;
           const points = generatePoints();
           const lines = document.createElement("a-lines");
           lines.id = "random-lines";
@@ -84,8 +89,18 @@
           lines.setAttribute("points", flattenPoints(points));
           lines.setAttribute("color", "blue");
           lines.setAttribute("position", "0 0 -80");
-          lines.setAttribute("rotation", [100, 0, 0].join());
           scene.appendChild(lines);
+        },
+        tick: function () {
+          const points = generatePoints();
+
+          const lines = document.querySelector("#random-lines");
+          lines.setAttribute("rotation", {
+            x: 100,
+            y: 0,
+            z: this.angle++ / 60,
+          });
+          //lines.setAttribute("rotation", [100, this.angle++ / 1, 0].join());
         },
       });
     </script>
