--- a/random-lines.html
+++ b/random-lines.html
@@ -7,64 +7,10 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     <script src="https://unpkg.com/aframe-lines@1.1.0/lines.js"></script>
+    <script src="./utils.js"></script>
     <script>
-      function seq(count, step = 1, start = 0) {
-        return Array.from({ length: count }).map((_, i) =>
-          typeof step === "function" ? step(i + start) : i * step + start
-        );
-      }
-
-      function range(from, to, step = 1) {
-        const reversed = to < from;
-        if (reversed) {
-          [to, from] = [from, to];
-        }
-        const length = Math.floor((to - from) / step) + 1;
-        const output = seq(length, step, from);
-        return reversed ? output.reverse() : output;
-      }
-
-      function deg2rad(deg = 0) {
-        return (deg * Math.PI) / 180;
-      }
-
-      function rad2deg(rad = 0) {
-        return (rad * 180) / Math.PI;
-      }
-
-      function pol2car(angle, radius) {
-        return [
-          Math.cos((angle - 90) * (Math.PI / 180)) * radius,
-          Math.sin((angle - 90) * (Math.PI / 180)) * radius,
-        ];
-      }
-
-      function car2pol(point) {
-        const [x, y] = point;
-        return [Math.atan2(y, x) * (180 / Math.PI), Math.sqrt(x * x + y * y)];
-      }
-
-      function remap(value, start1, stop1, start2, stop2) {
-        return (
-          ((value - start1) / (stop1 - start1)) * (stop2 - start2) + start2
-        );
-      }
-
-      function random(min = 0, max = 1) {
-        return min + Math.random() * (max - min);
-      }
-
-      function flattenPoints(points) {
-        return points.map((p) => p.join(" ")).join(",");
-      }
-
-      /*
-        v-for="a in range(0,360,360/10)"
-        :position="[...pol2car(a,5),-80].join(' ')"
-        */
-
-      function generatePoints() {
-        const maxDegrees = 360 * 5;
+      function generatePoints(randomness = 0.5) {
+        const maxDegrees = 360 * 8;
         const pointsCount = 100;
         const radius = 20;
         return range(0, maxDegrees, maxDegrees / pointsCount)
@@ -73,10 +19,14 @@
             0,
           ])
           .map(([x, y, z]) => [
-            x + random(-1, 1),
-            y + random(-1, 1),
-            z + random(-0.5, 0.5),
+            x + random(-randomness, randomness),
+            y + random(-randomness, randomness),
+            z + random(-randomness, randomness),
           ]);
+      }
+
+      function flattenPoints(points) {
+        return points.map((p) => p.join(" ")).join(",");
       }
 
       AFRAME.registerComponent("random-lines", {
@@ -87,20 +37,22 @@
           lines.id = "random-lines";
           const scene = document.querySelector("a-scene");
           lines.setAttribute("points", flattenPoints(points));
-          lines.setAttribute("color", "blue");
+          lines.setAttribute("color", "white");
           lines.setAttribute("position", "0 0 -80");
+          lines.setAttribute("opacity", 0.8);
           scene.appendChild(lines);
         },
-        tick: function () {
-          const points = generatePoints();
-
+        tick: function (time) {
           const lines = document.querySelector("#random-lines");
+          if (Math.floor(time % 10 === 0)) {
+            const points = generatePoints();
+            lines.setAttribute("points", flattenPoints(points));
+          }
           lines.setAttribute("rotation", {
             x: 100,
             y: 0,
-            z: this.angle++ / 60,
+            z: this.angle++ / 10, // Adjust to chage rotation speed
           });
-          //lines.setAttribute("rotation", [100, this.angle++ / 1, 0].join());
         },
       });
     </script>
@@ -114,11 +66,10 @@
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
       <a-sphere
-        position="0 5 -80"
-        material="color:red; opacity: 0.5"
+        position="0 0 -80"
+        material="color:gray;opacity:0.8"
         radius="1"
       ></a-sphere>
-      <!-- <a-lines points="0 5 -80, 1 4 -70, 0 3 -80" color="blue"></a-lines> -->
       <a-camera> </a-camera>
     </a-scene>
   </body>
