--- a/random-lines.html
+++ b/random-lines.html
@@ -8,69 +8,71 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     <script src="https://unpkg.com/aframe-lines@1.1.0/lines.js"></script>
     <script src="./utils.js"></script>
-    <script>
-      function generatePoints(randomness = 0.5) {
-        const maxDegrees = 360 * 8;
-        const pointsCount = 100;
-        const radius = 20;
-        return range(0, maxDegrees, maxDegrees / pointsCount)
-          .map((angle) => [
-            ...pol2car(angle, radius), // returning [x,y]
-            0,
-          ])
-          .map(([x, y, z]) => [
-            x + random(-randomness, randomness),
-            y + random(-randomness, randomness),
-            z + random(-randomness, randomness),
-          ]);
-      }
-
-      function flattenPoints(points) {
-        return points.map((p) => p.join(" ")).join(",");
-      }
-
-      AFRAME.registerComponent("random-lines", {
-        init: function () {
-          this.angle = 0;
-          const points = generatePoints();
-          const lines = document.createElement("a-lines");
-          lines.id = "random-lines";
-          const scene = document.querySelector("a-scene");
-          lines.setAttribute("points", flattenPoints(points));
-          lines.setAttribute("color", "white");
-          lines.setAttribute("position", "0 0 -80");
-          lines.setAttribute("opacity", 0.8);
-          scene.appendChild(lines);
-        },
-        tick: function (time) {
-          const lines = document.querySelector("#random-lines");
-          if (Math.floor(time % 10 === 0)) {
-            const points = generatePoints();
-            lines.setAttribute("points", flattenPoints(points));
-          }
-          lines.setAttribute("rotation", {
-            x: 100,
-            y: 0,
-            z: this.angle++ / 10, // Adjust to chage rotation speed
-          });
-        },
-      });
-    </script>
+    <script src="./components/random-lines.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden">
     <a-scene
-      random-lines
       id="scene"
       vr-mode-ui="enabled: false"
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
+      <a-entity
+        random-lines="opacity: 0.4; degrees: 1440;"
+        position="0 -5 -50"
+        animation="dur: 10000; property: rotation; to: 0 360 0; loop: true; easing: linear;"
+      >
+      </a-entity>
+      <a-entity
+        random-lines="opacity: 0.7; degrees: 360;"
+        position="0 -5 -50"
+        animation="dur: 20000; property: rotation; to: 0 -360 0; loop: true; easing: linear;"
+      ></a-entity>
       <a-sphere
-        position="0 0 -80"
-        material="color:gray;opacity:0.8"
-        radius="1"
+        position="0 -5 -50"
+        material="color:gray;opacity:1"
+        radius="4"
       ></a-sphere>
-      <a-camera> </a-camera>
+      <a-camera></a-camera>
+    </a-scene>
+  </body>
+</html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>AR.js demo Stars</title>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://unpkg.com/aframe-lines@1.1.0/lines.js"></script>
+    <script src="./utils.js"></script>
+    <script src="./components/random-lines.js"></script>
+  </head>
+  <body style="margin: 0; overflow: hidden">
+    <a-scene
+      id="scene"
+      vr-mode-ui="enabled: false"
+      embedded
+      arjs="sourceType: webcam; debugUIEnabled: false;"
+    >
+      <a-entity
+        random-lines="opacity: 0.4; degrees: 1440;"
+        position="0 -5 -50"
+        animation="dur: 10000; property: rotation; to: 0 360 0; loop: true; easing: linear;"
+      >
+      </a-entity>
+      <a-entity
+        random-lines="opacity: 0.7; degrees: 360;"
+        position="0 -5 -50"
+        animation="dur: 20000; property: rotation; to: 0 -360 0; loop: true; easing: linear;"
+      ></a-entity>
+      <a-sphere
+        position="0 -5 -50"
+        material="color:gray;opacity:1"
+        radius="4"
+      ></a-sphere>
+      <a-camera></a-camera>
     </a-scene>
   </body>
 </html>
