--- a/particles.html
+++ b/particles.html
@@ -15,6 +15,19 @@
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
+      <a-assets>
+        <a-asset-item
+          autoload
+          id="jupiter"
+          src="planets2/jupiter.gltf"
+        ></a-asset-item>
+      </a-assets>
+      <a-entity
+        gltf-model="#jupiter"
+        position="0 0 -40"
+        scale="0.02 0.02 0.02"
+        animation="dur: 20000; property: rotation; to: 0 -360 0; loop: true; easing: linear;"
+      ></a-entity>
       <a-entity
         position="0 0 -40"
         sprite-particles="radialType: circleXZ; spawnRate: 200; lifeTime: 5; radialPosition: 10..11; radialVelocity: 0..2; angularVelocity: 0 2 0;"
@@ -22,6 +35,11 @@
       <a-entity
         position="0 0 -40"
         sprite-particles="radialType: circleXY; spawnRate: 500; lifeTime: 5; radialPosition: 3; radialVelocity: 0..1; angularVelocity: 0 2 0;"
+      ></a-entity>
+
+      <a-entity
+        light="type: directional; color: #FFF; intensity: 5"
+        position="0 0 5"
       ></a-entity>
       <a-camera></a-camera>
     </a-scene>
