--- a/planets2.html
+++ b/planets2.html
@@ -7,6 +7,9 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     <script src="https://unpkg.com/aframe-sprite-particles-component@^0.5.4/aframe-sprite-particles-component.js"></script>
+    <script src="./utils.js"></script>
+    <script src="./components/random-lines.js"></script>
+
     <script type="module">
       import { createApp } from "https://unpkg.com/petite-vue?module";
       import {
@@ -16,8 +19,12 @@
 
       const planets = {
         earth: {
-          planet: generatePlanet("earth"),
-          container: generatePlanetContainer("earth"),
+          planet: generatePlanet("earth", 3),
+          container: generatePlanetContainer("earth", 3),
+        },
+        jupiter: {
+          planet: generatePlanet("jupiter"),
+          container: generatePlanetContainer("jupiter"),
         },
       };
 
@@ -41,14 +48,33 @@
         ></a-asset-item>
       </a-assets>
       <a-entity>
-        <a-entity v-for="p in planets" :position="p.container.position">
-          <a-entity gltf-model="#jupiter" :scale="p.planet.scale"></a-entity>
-        </a-entity>
+        <!-- <a-entity v-for="p in planets">
+          <a-entity
+            gltf-model="#jupiter"
+            :position="{ x: 0, y: 0, z: -20}"
+            :scale="p.planet.scale"
+            :animation="p.planet.animation"
+          ></a-entity>
+        </a-entity> -->
+
         <a-entity
           light="type: directional; color: #FFF; intensity: 5"
           position="0 0 5"
         ></a-entity>
       </a-entity>
+
+      <a-entity
+        gltf-model="#jupiter"
+        :position="{ x: 0, y: 0, z: -20}"
+        :scale="{ x: 0.01, y: 0.01, z: 0.01}"
+        :animation="planets.earth.planet.animation"
+      ></a-entity>
+
+      <a-entity
+        position="0 0 40"
+        sprite-particles="radialType: circleXY; spawnRate: 500; lifeTime: 5; radialPosition: 3; radialVelocity: 0..0.1; angularVelocity: 0 2 0;"
+      ></a-entity>
+
       <a-camera></a-camera>
     </a-scene>
     <pre style="z-index: 1000; position: fixed; top: 0; left: 0">
