--- a/stars.html
+++ b/stars.html
@@ -167,7 +167,7 @@
         embedded
         arjs='sourceType: webcam; debugUIEnabled: false;'>
     <a-assets>
-        <a-asset-item autoload id="messier1" src="3d/messier1.glb"></a-asset-item>
+        <a-asset-item autoload id="messier" src="3d/galaxy_1.glb"></a-asset-item>
         <a-asset-item autoload id="testModel" src="planets/Test.glb"></a-asset-item>
         <img id="m92" src="images/m92.png">
         <img  id="transparent1" src="images/heic0918a-transparent.png">
@@ -178,19 +178,19 @@
 
 <!--    <a-sphere position="0 5 -80" material="color:red; opacity: 0.5"  radius="1" ></a-sphere>-->
     <a-text id="timeLabel" position="0 2.5 -10" value="Start ws timer to start" align="center"></a-text>
-<!--   <a-entity id="galaxy" gltf-model="#messier1"-->
-<!--             rotation="45 45 0"-->
-<!--             position="-20 5 -80"-->
-<!--             scale="0.01 0.01 0.01">-->
-<!--   </a-entity>-->
+   <a-entity id="galaxy" gltf-model="#messier"
+             rotation="0 0 0"
+             position="-20 5 -100"
+             scale="0.5 0.5 0.5">
+   </a-entity>
 
-    <a-image src="#transparent1"
-             rotation="45 0 0"
-             position="-20 5 -50"
-             scale="50 50 50"
-             animation__move = "property:position; dur: 20000; to: 0 100 -999"
-             animation__rotation = "property:rotation; dur: 30000; to: 45 0 360; loop:true; easing: linear"
-    ></a-image>
+<!--    <a-image src="#transparent1"-->
+<!--             rotation="45 0 0"-->
+<!--             position="-20 5 -50"-->
+<!--             scale="50 50 50"-->
+<!--             animation__move = "property:position; dur: 20000; to: 0 100 -999"-->
+<!--             animation__rotation = "property:rotation; dur: 30000; to: 45 0 360; loop:true; easing: linear"-->
+<!--    ></a-image>-->
 
 
 
