--- a/particles2.html
+++ b/particles2.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>AR.js demo Stars</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        color: white;
+        font-size: 14px;
+      }
+    </style>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     <script src="https://unpkg.com/aframe-sprite-particles-component@^0.5.4/aframe-sprite-particles-component.js"></script>
@@ -14,27 +21,38 @@
       import { createApp, reactive } from "https://unpkg.com/petite-vue?module";
       import { generatePlanet } from "./lib/planets.js";
 
-      const planets = {
-        mercury: generatePlanet("mercury"),
-        venus: generatePlanet("venus"),
-        earth: generatePlanet("earth"),
-        mars: generatePlanet("mars"),
-        jupiter: generatePlanet("jupiter"),
-        saturn: generatePlanet("saturn"),
-      };
-
-      const p = reactive({
+      const p1 = reactive({
         radialType: "circleXY",
-        spawnRate: 200,
+        spawnRate: "200",
         lifeTime: "50",
+        radialPosition: "9..11",
+        radialVelocity: "0..-1",
+        angularVelocity: "0 0 1",
+        trailLifeTime: "2",
+        trailInterval: ".1",
+        opacity: ".1",
+      });
+
+      const p2 = reactive({
+        lifeTime: "10",
+        spawnRate: "200",
+        spawnType: "continuous",
+        opacity: "0,1,1,0",
+        radialType: "sphere",
         radialPosition: "10",
-        radialVelocity: "0..0.1",
-        angularVelocity: "0 0 0",
+        scale: "1",
+        radialVelocity: "-1..1",
+        acceleration: "0 0 0",
+        source: "#source",
+        destination: "#source",
+        destinationWeight: "1",
+        destinationOffset: "-0.2 -0.2 -0.2..0.2 0.2 0.2",
       });
 
       createApp({
-        angle: -80,
-        p,
+        angle: 0,
+        p1,
+        p2,
       }).mount();
     </script>
   </head>
@@ -46,37 +64,44 @@
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
       <a-entity
+        :rotation="{x: -angle, y: 0, z: 0}"
         position="0 0 -40"
-        :rotation="{ x: angle, y: 0, z: 0}"
-        :sprite-particles="p"
+        :sprite-particles="p1"
       ></a-entity>
 
-      <a-camera near="0.000001"></a-camera>
+      <a-entity
+        opacity="0.5"
+        position="0 0 -40"
+        animation="dur: 50000; property: rotation; to: 0 0 -360; loop: true; easing: linear;"
+      >
+        <a-box id="source" position="10 0 0"></a-box>
+      </a-entity>
+
+      <a-entity position="0 0 -40" :sprite-particles="p2"></a-entity>
+
+      <a-camera></a-camera>
     </a-scene>
-    <div style="z-index: 1000; position: fixed; top: 0; left: 0">
-      <input type="range" v-model.number="angle" min="-90" max="0" />
-      <input type="text" v-model.string="p.radialType" />
-      <input type="range" v-model.string="p.spawnRate" max="1000" />
-      <input
-        type="range"
-        v-model.string="p.radialPosition"
-        max="20"
-        step="any"
-      />
-      <input type="text" v-model.string="p.radialVelocity" />
-      <input type="text" v-model.string="p.angularVelocity" />
-    </div>
-    <pre
+    <div
       style="
         z-index: 1000;
         position: fixed;
-        left: 0;
-        bottom: 0;
-        height: 80vh;
+        top: 10px;
+        left: 10px;
+        height: 100vh;
         overflow: auto;
       "
     >
-      {{ p }}
-    </pre>
+      <input type="range" v-model.number="angle" max="90" />
+      <h1>P1</h1>
+      <div v-for="field, key in p1">
+        <div>{{ key }}</div>
+        <input type="text" v-model.string="p1[key]" />
+      </div>
+      <h1>P2</h1>
+      <div v-for="field, key in p2">
+        <div>{{ key }}</div>
+        <input type="text" v-model.string="p2[key]" />
+      </div>
+    </div>
   </body>
 </html>
